[project]
name = "esmt"
version = "0.1.0"
description = "Elastic Spectral Matryoshka Transformer"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.4.0",
    "transformers>=4.40.0",
    "datasets>=2.19.0",
    "tensorboard>=2.16.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
